[package]
name = "pacman-mirror-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
base64 = "0.22.1"
env_logger = "0.11.8"
flate2 = "1.1.1"
hex = "0.4.3"
itertools = "0.14.0"
log = "0.4.27"
maud = "0.27.0"
minreq = { version = "2.13.4", features = ["https"] }
os_pipe = "1.2.2"
owning_ref = "0.4.1"
rand = "0.9.1"
rayon = "1.10.0"
rouille = { git = "https://github.com/jsrobson10/rouille/" }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_yml = "0.0.12"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.12"
